# fcs-show

./: CMakeLists.txt  README.md  main_diagrams.py
src/: autopilot.h  config.h  defines.h  main.cc  util.cc  util.h
src/aircraft/: aircraft.cc  aircraft.h  drone.cc  drone.h
src/guidance/: guidance.cc  guidance.h
src/mpc/: mpc.cc  mpc.h
src/mpc/control_mode/: acro.cc  acro.h  alt_hold.cc  alt_hold.h  angle.cc  angle.h  control_mode.cc  control_mode.h  cruise.cc  cruise.h  idle.cc  idle.h  loiter.cc  loiter.h  position.cc  position.h  waypoint.cc  waypoint.h
src/mpc/optimization/: mopso.cc  mopso.h  optimization.cc  optimization.h
src/navigation/: navigation.cc  navigation.h
